feat: :sparkles: agregando nuevas imagenes y color al texto para mejor UI

--- a/cundinamarca.html
+++ b/cundinamarca.html
@@ -5,10 +5,10 @@
 <title>Cundinamarca</title>
 </head>
 <body>
-<h1>Cundinamarca</h1>
+<h1 style="color: blueviolet;">Cundinamarca</h1>
 <p><a href="index.html">Volver al mapa</a></p>
 
-<h2>Sitios turísticos</h2>
+<h2 style="color: blue;">Sitios turísticos</h2>
 <ul>
   <li>Catedral de Sal de Zipaquirá</li>
   <li>Laguna de Guatavita</li>
@@ -18,8 +18,12 @@
 </ul>
 
 <img src="imagenes/sitio_cundinamarca.jpg" alt="Paisaje de Cundinamarca" width="150">
+<img src="imagenes/laguna-guatavita.jpg" alt="Paisaje de Cundinamarca" width="150">
+<img src="imagenes/choachi.jpg" alt="Paisaje de Cundinamarca" width="150">
 
-<h2>Comida típica</h2>
+
+
+<h2 style="color: blue;">Comida típica</h2>
 <ul>
   <li>Ajiaco</li>
   <li>Tamal</li>
@@ -29,12 +33,14 @@
 </ul>
 
 <img src="imagenes/comida_cundinamarca.jpeg" alt="Comida de Cundinamarca" width="150">
+<img src="imagenes/fritanga.jpg" alt="Comida de Cundinamarca" width="150">
 
 
-<h2>Información económica</h2>
+
+<h2 style="color: blue;">Información económica</h2>
 <p>Servicios y comercio articulados al mercado de Bogotá, logística y transporte, manufactura (alimentos, bebidas, químicos) y agro (flores, hortalizas, lácteos).</p>
 
-<h2>Estadística</h2>
+<h2 style="color: blue;">Estadística</h2>
 <table style="border-collapse:collapse">
   <tr>
     <th style="border:1px solid #000;padding:6px">Indicador</th>
@@ -62,7 +68,7 @@
   </tr>
 </table>
 
-<h2>Video</h2>
+<h2 style="color: blue;">Video</h2>
 <video controls width="640">
   <source src="videos/cundinamarca.mp4" type="video/mp4">
 </video>
