--- a/santander.html
+++ b/santander.html
@@ -5,10 +5,10 @@
 <title>Santander</title>
 </head>
 <body>
-<h1>Santander</h1>
+<h1 style="color: blueviolet;">Santander</h1>
 <p><a href="index.html">Volver al mapa</a></p>
 
-<h2>Sitios turísticos</h2>
+<h2 style="color: blue;">Sitios turísticos</h2>
 <ul>
   <li>Cañón del Chicamocha (Panachi)</li>
   <li>Barichara</li>
@@ -18,8 +18,11 @@
 </ul>
 
 <img src="imagenes/sitio_santander.jpg" alt="Paisaje de Santander" width="150">
+<img src="imagenes/barichara-vista-hacia-catedral.jpg" alt="Paisaje de Santander" width="150">
+<img src="imagenes/san-gil-guia-turismo-santander-18.jpg" alt="Paisaje de Santander" width="150">
 
-<h2>Comida típica</h2>
+
+<h2 style="color: blue;">Comida típica</h2>
 <ul>
   <li>Mute santandereano</li>
   <li>Cabro con pepitoria</li>
@@ -29,12 +32,16 @@
 </ul>
 
 <img src="imagenes/comida_santander.jpg" alt="Comida de Santander" width="150">
+<img src="imagenes/cabro.jpg" alt="Comida de Santander" width="150">
+<img src="imagenes/arepas-de-choclo-sin-relleno.jpg" alt="Comida de Santander" width="150">
 
-<h2>Información económica</h2>
+
+
+<h2 style="color: blue;">Información económica</h2>
 <p>Servicios y comercio, turismo de aventura, agro (cacao, café, tabaco, ganadería) e industria.
 Ecopetrol y actividades asociadas a la refinería de Barrancabermeja aportan a la dinámica regional.</p>
 
-<h2>Estadística</h2>
+<h2 style="color: blue;">Estadística</h2>
 <table style="border-collapse:collapse">
   <tr>
     <th style="border:1px solid #000;padding:6px">Indicador</th>
@@ -62,7 +69,7 @@ Ecopetrol y actividades asociadas a la refinería de Barrancabermeja aportan a l
   </tr>
 </table>
 
-<h2>Video</h2>
+<h2 style="color: blue;">Video</h2>
 <video controls width="640">
   <source src="videos/santander.mp4" type="video/mp4">
 </video>
