--- a/valle_del_cauca.html
+++ b/valle_del_cauca.html
@@ -5,10 +5,10 @@
 <title>Valle del Cauca</title>
 </head>
 <body>
-<h1>Valle del Cauca</h1>
+<h1 style="color: blueviolet;"> Valle del Cauca</h1>
 <p><a href="index.html">Volver al mapa</a></p>
 
-<h2>Sitios turísticos</h2>
+<h2 style="color: blue;" >Sitios turísticos</h2>
 <ul>
   <li>Santiago de Cali (salsa y centro histórico)</li>
   <li>Parque Nacional Natural Farallones de Cali</li>
@@ -18,8 +18,10 @@
 </ul>
 
 <img src="imagenes/sitio_valle.jpeg" alt="Paisaje de Valle del cauca" width="150">
+<img src="imagenes/Basílica_de_Buga.jpg" alt="Paisaje de Valle del cauca" width="150">
 
-<h2>Comida típica</h2>
+
+<h2 style="color: blue;">Comida típica</h2>
 <ul>
   <li>Sancocho de gallina</li>
   <li>Champus</li>
@@ -29,11 +31,13 @@
 </ul>
 
 <img src="imagenes/comida_valle.jpg" alt="Comida de Valle del cauca" width="150">
+<img src="imagenes/aborrajados_colombianos_55852_orig.jpg" alt="Comida de Valle del cauca" width="150">
 
-<h2>Información económica</h2>
+
+<h2 style="color: blue;">Información económica</h2>
 <p>Industria manufacturera (alimentos, bebidas, químicos), agro (caña de azúcar, café, frutas), comercio exterior por el puerto de Buenaventura y servicios.</p>
 
-<h2>Estadística</h2>
+<h2 style="color: blue;" >Estadística</h2>
 <table style="border-collapse:collapse">
   <tr>
     <th style="border:1px solid #000;padding:6px">Indicador</th>
@@ -61,10 +65,9 @@
   </tr>
 </table>
 
-<h2>Video</h2>
+<h2 style="color: blue;">Video</h2>
 <video controls width="640">
   <source src="videos/valle_del_cauca.mp4" type="video/mp4">
-  Tu navegador no soporta el elemento video.
 </video>
 </body>
 </html>
